Updated app.conf to fill in missing pieces

--- a/default/app.conf
+++ b/default/app.conf
@@ -5,12 +5,16 @@
 [install]
 is_configured = 0
 
+[package]
+id = welcome-app
+check_for_updates = true
+
 [ui]
 is_visible = 1
 label = Welcome App
 
 [launcher]
 author = Shay Harding
-description = 
-version = 0.5.0
+description = Enablement for Splunk users
+version = 0.7.0
 
