Updated app config for new name

--- a/default/app.conf
+++ b/default/app.conf
@@ -6,15 +6,15 @@
 is_configured = 0
 
 [package]
-id = welcome-app
+id = compass
 check_for_updates = true
 
 [ui]
 is_visible = 1
-label = Welcome App
+label = Compass
 
 [launcher]
 author = Shay Harding
-description = Enablement for Splunk users
-version = 0.7.0
+description = Helping you find your way across the Splunk landscape
+version = 0.7.5
 
